# self-cloud

./: .gitignore  Cargo.toml  Cross.toml  README.md  rust-toolchain.toml  tailwind.config.js  users.json
.cargo/: config.toml
.github/workflows/: release.yaml
app/: Cargo.toml  build.rs
app/src/: api.rs  auth.rs  common.rs  context.rs  file_manager.rs  lib.rs  updates.rs
app/src/components/: apex_chart.rs  file_browser.rs  input_field.rs  mod.rs  nav_bar.rs  terminal.rs  toaster.rs
app/src/hooks/: mod.rs  use_socket.rs
app/src/pages/: dashboard.rs  home.rs  mod.rs  settings.rs
app/src/pages/project/: container_page.rs  mod.rs  project_page.rs  settings.rs  support_containers.rs
app/src/utils/: mod.rs  xterm.rs
docs/: DEPLOYMENT.md
frontend/: Cargo.toml
frontend/src/: lib.rs
server/: Cargo.toml  build.rs
server/src/: auth.rs  container_manager.rs  fileserv.rs  gateway.rs  image_uploader.rs  leptos_service.rs  main.rs  system_monitor.rs  terminal.rs  tls_gen.rs  update_manager.rs
server/src/container_events/: attach.rs  logs.rs  mod.rs  stats.rs
style/: main.scss
