[package]
name = "app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos.workspace = true
leptos_meta.workspace = true
leptos_router.workspace = true
leptos_axum = { workspace = true, optional = true }
leptos-use.workspace = true

http.workspace = true
cfg-if.workspace = true
thiserror.workspace = true

uuid.workspace = true
pingora = { workspace = true, optional = true }
once_cell = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }

anyhow.workspace = true

serde.workspace = true
tracing.workspace = true

tower-cookies = { workspace = true, optional = true }

aes-gcm-siv = { workspace = true, optional = true }
rand = { workspace = true }

bincode = { workspace = true }
base64 = { workspace = true, optional = true }

time = { workspace = true, optional = true }
serde_json = { workspace = true }

unicase.workspace = true
unicase_serde.workspace = true

docker-api = { workspace = true, optional = true }
docker-api-stubs = { workspace = true }

chrono.workspace = true

leptos_sse = { workspace = true }

leptos-chartistry.workspace = true

json-patch.workspace = true

ansi-to-html.workspace = true

leptos_icons.workspace = true
icondata.workspace = true
serde_urlencoded.workspace = true
vt100.workspace = true

wasm-bindgen.workspace = true
js-sys.workspace = true
serde-wasm-bindgen.workspace = true

serde_qs.workspace = true
serde_path_to_error.workspace = true

[features]
default = []
hydrate = ["leptos/hydrate", "leptos_meta/hydrate", "leptos_router/hydrate"]
ssr = [
    "leptos/ssr",
    "leptos_meta/ssr",
    "leptos_router/ssr",
    "leptos-use/ssr",
    "dep:leptos_axum",
    "dep:pingora",
    "dep:once_cell",
    "dep:tokio",
    "dep:tower-cookies",
    "dep:aes-gcm-siv",
    "dep:base64",
    "dep:time",
    "dep:docker-api",
]
