[package]
name = "app"
version = "0.1.0"
edition = "2021"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.3", features = ["wasm_js"] }
uuid = { workspace = true, features = ["js"] }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos.workspace = true
leptos_meta.workspace = true
leptos_router.workspace = true
leptos_axum = { workspace = true, optional = true }
leptos-use = "0.15.0"
leptos-chartistry = "0.2.2"

http.workspace = true
codee.workspace = true
cfg-if.workspace = true
thiserror.workspace = true

uuid.workspace = true
pingora = { workspace = true, optional = true }
once_cell = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }
reqwest = { workspace = true, optional = true, features = ["json"] }


anyhow.workspace = true

serde.workspace = true
tracing.workspace = true

cookie = { workspace = true, optional = true }

aes-gcm-siv = { workspace = true, optional = true }
rand = { workspace = true }

bincode = { workspace = true }
base64 = { workspace = true, optional = true }

time = { workspace = true, optional = true }
serde_json = { workspace = true }

unicase.workspace = true
unicase_serde.workspace = true

docker-api = { workspace = true, optional = true }
docker-api-stubs = { workspace = true }

chrono.workspace = true


web-sys.workspace = true

json-patch.workspace = true

ansi-to-html.workspace = true

leptos_icons.workspace = true
icondata.workspace = true
serde_urlencoded.workspace = true
vt100.workspace = true

wasm-bindgen.workspace = true
js-sys.workspace = true
serde-wasm-bindgen.workspace = true

serde_qs.workspace = true
serde_path_to_error.workspace = true

smallvec.workspace = true

slotmap.workspace = true


[features]
default = []
hydrate = [
    "leptos/hydrate",
]
ssr = [
    "leptos/ssr",
    "leptos-use/ssr",
    "dep:leptos_axum",
    "dep:pingora",
    "dep:once_cell",
    "dep:tokio",
    "dep:cookie",
    "dep:aes-gcm-siv",
    "dep:base64",
    "dep:time",
    "dep:docker-api",
    "dep:reqwest",
]


[build-dependencies]
chrono = "0.4"
