[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
app = { path = "../app", default-features = false, features = ["hydrate"] }
leptos = { workspace = true, features = [ "hydrate" ] }

console_error_panic_hook.workspace = true
tracing-subscriber-wasm.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
wasm-bindgen.workspace = true
getrandom = { workspace = true, features = ["wasm_js"] }
getrandom-02 = { package = "getrandom", version = "0.2", features = ["js"] }
uuid = { workspace = true, features = ["js"] }
