[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
app = { path = "../app", default-features = false, features = ["ssr"] }
leptos = { workspace = true, features = ["ssr"] }
leptos_axum.workspace = true

axum.workspace = true
tracing-subscriber.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
once_cell.workspace = true

structopt.workspace = true
async-trait.workspace = true
pingora.workspace = true

instant-acme.workspace = true

serde_json.workspace = true

anyhow.workspace = true
