cargo-features = ["codegen-backend"]

[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
app = { path = "../app", default-features = false, features = ["ssr"] }
leptos = { workspace = true, features = ["ssr"] }
leptos_axum.workspace = true
leptos_router = { workspace = true, features = ["ssr"] }

axum.workspace = true
tracing-subscriber.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
once_cell.workspace = true

clap.workspace = true
async-trait.workspace = true
pingora.workspace = true

instant-acme.workspace = true

serde_json.workspace = true

anyhow.workspace = true

rcgen.workspace = true
openssl.workspace = true

uuid.workspace = true

axum-extra = { version = "0.10", features = ["cookie"] }
cookie = "0.18"

aes-gcm-siv = { workspace = true }
rand.workspace = true

bincode.workspace = true
base64.workspace = true

tracing-journald.workspace = true

time.workspace = true
http.workspace = true
unicase.workspace = true
futures.workspace = true

regex-macro.workspace = true

docker-api.workspace = true

chrono.workspace = true

dotenv.workspace = true


async-stream.workspace = true
tokio-stream.workspace = true

reqwest.workspace = true

phf.workspace = true

struct-patch.workspace = true
json-patch.workspace = true

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = "0.5"
